# EyeAmMe

./: .gitignore  analysis.py  auth.py  config.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  scheduler.py  storage.py
src/eyeamme/: analysis.py  auth.py  config.py  main.py  scheduler.py  storage.py
static/: style.css
templates/: dashboard.html  login.html  report.html
test/: test_settings.py
